# dotnet-lens

./: Cargo.toml  README.md
src/: lib.rs  parser.rs  search.rs
tests/: search_and_parse.rs  search_integration_tests.rs
tests/search_and_parse_data/CsharpClassLib/: Class1.cs
tests/search_and_parse_data/CsharpConsole/: CsharpConsole.csproj
tests/search_and_parse_data/FsharpConsole/: FsharpConsole.fsproj
tests/search_and_parse_data/VbConsole/: VbConsole.vbproj
